# BlutVine

./: 003-audio-fingerprint-2.patch  BlutVine.md  README.md  api.env  apply_patch.py  flags.linux.gn  machine_id.cc  mini_apply_patch.py  prepare.sh  prepare_src.py  rebrowser-stealth.patch  series  setup-and-build.sh  setup.sh  static_bitmap_image.cc
000/: render_process_host_impl.cc  ungoogled_switches.cc  ungoogled_switches.h
001/: v8-runtime-agent-impl.cc  v8-runtime-agent-impl.h
002/: BUILD.gn  client_hints.cc  fingerprint_data.h  frame_fetch_context.cc  navigator.cc  navigator_base.cc  navigator_ua.cc  user_agent_metadata.cc  user_agent_metadata.h  user_agent_utils.cc
003/: offline_audio_context.cc  realtime_analyser.cc
004/: machine_id.cc
005/: navigator_concurrent_hardware.cc  navigator_device_memory.cc
006/: font_cache.cc
007/: element.cc  element.h  element.idl
010/: headless_browser_impl.cc
011/: BUILD.gn  fingerprint_data.h  gpu_fingerprint.cc  gpu_fingerprint.h  gpu_info.cc  gpu_info.h  webgl_rendering_context_base.cc
012/: SkFingerprintSeed.h  SkScan_AAAPath.cpp  base_rendering_context_2d.cc  graphics_context.cc  image_data_buffer.cc  static_bitmap_image.cc  static_bitmap_image.h
013/: fingerprint_data.h  html_canvas_element.cc  webgl_rendering_context_base.cc
014/: document.cc  element.cc  element.h  quad_f.cc  quad_f.h  range.cc
015/: base_rendering_context_2d.cc
016/: webgl_rendering_context_base.cc
018/: timezone_controller.cc
deprecated/: 000-add-fingerprint-switches.patch
fingerprint/: 000-add-fingerprint-switches.patch  001-disable-runtime.enable.patch  002-user-agent-fingerprint.patch  003-audio-fingerprint.patch  005-hardware-concurrency-fingerprint.patch  006-font-fingerprint.patch  007-shadow-root.patch  009-webdriver.patch  010-headless.patch  011-gpu-info.patch  012-canvas-get-image-data.patch  013-canvas-toDataURL.patch  014-client-rects.patch  015-canvas-measure-text.patch  016-webgl-readPixels.patch  018-timezone.patch
fingerprint-chromium/: 000-add-fingerprint-switches.patch  001-disable-runtime.enable.deprecated.patch  001-disable-runtime.enable.patch  002-user-agent-fingerprint.patch  003-audio-collector.patch  003-audio-fingerprint-2.deprecated.patch  003-audio-fingerprint-2.patch  003-audio-fingerprint-noise.patch  003-audio-fingerprint.patch  004-rlz-spoofing.patch  005-hardware-concurrency-fingerprint.patch  006-font-fingerprint.patch  007-shadow-root.patch  008-screen-fingerprint.patch  009-webdriver.patch  010-headless.patch  011-gpu-info.patch  012-canvas-collector.patch  012-canvas-fingerprint-get-image-data.patch  012-canvas-fingerprint-gpu-geometry-perturbation.patch  012-canvas-fingerprint-gpu.patch  012-canvas-fingerprint-skia.patch  012-canvas-fingerprint-toDataURL.patch  012-canvas-fingerprint.deprecated.patch  012-canvas-fingerprint.patch  012-canvas-get-image-data.patch  013-canvas-toDataURL.deprecated.patch  013-webgl-fingerprint.patch  014-client-rects.deprecated.patch  014-client-rects.patch  015-canvas-measure-text-collector.patch  015-canvas-measure-text.deprecated.patch  015-canvas-measure-text.patch  015-mouse-event-fingerprint.patch  016-timezone.patch  016-webgl-collector.patch  016-webgl-readPixels.deprecated.patch  016-webgl-readPixels.patch  017-collector.patch  017-mouse-event-fingerprint.patch  (+21 more)
scripts/: Sccache.sh  apply_patches.sh  build.sh  build_all.sh  fetch.sh  package.sh  patch.sh  shared.sh
