# =========================
# Build type
# =========================
is_official_build = false
is_component_build = true   # set true if you want faster incremental builds
is_debug = false

# =========================
# Toolchain
# =========================
is_clang = true
use_lld = true
use_sysroot = true

# =========================
# Performance / build speed
# =========================
symbol_level = 0
blink_symbol_level = 0
v8_symbol_level = 0
use_debug_fission = false
treat_warnings_as_errors = false

# Optional: faster builds (slightly less optimized binary)
use_thin_lto = false

# =========================
# Media (Chrome-like)
# =========================
proprietary_codecs = true
ffmpeg_branding = "Chrome"
enable_widevine = true

# =========================
# Hardware acceleration
# =========================
use_vaapi = true

# =========================
# Display (Linux modern stack)
# =========================
use_ozone = true
ozone_platform_wayland = true
ozone_platform_x11 = true

# =========================
# Chrome-like behavior
# =========================
disable_fieldtrial_testing_config = false
use_kerberos = true

# =========================
# Cleanup / deprecated
# =========================
enable_nacl = false

# =========================
# Google API keys (still not full Chrome)
# =========================
google_api_key = ""
google_default_client_id = ""
google_default_client_secret = ""
