# Copyright (c) 2020 The ungoogled-chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

component("ungoogled_switches") {
  sources = [
    "fingerprint_data.h",
    "ungoogled_switches.h",
    "ungoogled_switches.cc",
  ]

  defines = [ "IS_UNGOOGLED_IMPL" ]

  deps = [ "//base" ]
}